# use_fmod

./: .gitignore  LICENSE  README.en.md  README.md
use_fmod/: settings.gradle
use_fmod/app/: build.gradle
use_fmod/app/src/androidTest/java/top/zcwfeng/fmod/: ExampleInstrumentedTest.kt
use_fmod/app/src/main/: AndroidManifest.xml
use_fmod/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
use_fmod/app/src/main/cpp/demo/playsound/: common.cpp  common.h  common_platform.cpp  play_sound.cpp
use_fmod/app/src/main/cpp/include/: custom_common.h
use_fmod/app/src/main/java/top/zcwfeng/fmod/: FmodChangeVoice.kt  MainActivity.kt  PlaySound.kt
use_fmod/app/src/main/res/layout/: activity_fmod_change_voice.xml  activity_main.xml  activity_play_sound.xml
use_fmod/app/src/main/res/values/: strings.xml  themes.xml
use_fmod/app/src/main/res/values-night/: themes.xml
use_fmod/app/src/test/java/top/zcwfeng/fmod/: ExampleUnitTest.kt
use_fmod/gradle/wrapper/: gradle-wrapper.properties
